--- a/web/app/views/registers/_form.html.erb
+++ b/web/app/views/registers/_form.html.erb
@@ -36,6 +36,11 @@
     <%= form.text_area :username %>
   </div>
 
+  <div class="field">
+    <%= form.label :password %>
+    <%= form.password_field :password %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
