--- a/web/app/views/registers/show.html.erb
+++ b/web/app/views/registers/show.html.erb
@@ -1,4 +1,8 @@
-<p id="notice"><%= notice %></p>
+<% flash.each do |key, message| %>
+  <div class="alert alert-<%= key %>">
+  <%= message %>
+</div>
+<% end %>
 
 <p>
   <strong>Firstname:</strong>
