--- a/web/app/views/registers/index.html.erb
+++ b/web/app/views/registers/index.html.erb
@@ -1,6 +1,16 @@
-<h1>New Register</h1>
-<p id="notice"><%= notice %></p>
+<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-<%= render 'form', register: @register %>
+<div class = "container">
+  <div class="page-header"><h1>New Register</h1></div>
+  <% flash.each do |key, message| %>
+    <div class="alert alert-<%= key %>">
+      <%= message %>
+    </div>
+  <% end %>
 
-<%= link_to 'Back', registers_path %>
+  <%= render 'form', register: @register %>
+
+  <%= link_to 'Back', registers_path %>
+</div>
+
