--- a/web/app/views/static_pages/form.html.erb
+++ b/web/app/views/static_pages/form.html.erb
@@ -1,28 +1,50 @@
-<h1>Apply Page</h1>
+<div class="page-header">
+  <h1>Apply Page</h1>
+</div>
 
-<% flash.each do |key, value| %>
-  <h2><%= value %></font></h2>
+<% flash.each do |key, message| %>
+  <div class="alert alert-<%= key %>">
+    <%= message %>
+  </div>
 <% end %>
 <%= form_for(form_path) do |f| %>
-  <div class="form-group">
+
+
+    <div class="form-group row">
+      <div class="col-md-6">
     <%= f.label :full_name %>
-    <%= f.text_field :full_name %>
-
-    <%= f.label :email_address %>
-    <%= f.text_field :email_address %>
-
-    <%= f.label :gender %>
-    <%= f.label :gender, "Male", :value => "true"  %>
-    <%= f.radio_button :gender, true %>
-    <%= f.label :gender, "Female", :value => "false" %>
-    <%= f.radio_button :gender, false %>
-
-    <%= f.label :blood_type %>
-    <%= f.select :blood_type, ['A' ,'B', 'AB', 'O'], {}, prompt: 'Select One' %>
-     <br>
-     <br>
-     <%= f.submit "Apply", class: "btn btn-primary" %>
+    <%= f.text_field :full_name, class: 'form-control' %>
+      </div>
     </div>
+
+    <div class="form-group row">
+      <div class="col-md-6">
+    <%= f.label :email_address %>
+    <%= f.text_field :email_address, class: 'form-control' %>
+      </div>
+    </div>
+
+
+    <div class="form-group row">
+      <div class="col-md-6">
+    <%= f.label :gender %>
+    <%= f.label :gender, "Male", :value => "true",  class: 'radio-inline'  %>
+    <%= f.radio_button :gender, true %>
+    <%= f.label :gender, "Female", :value => "false",  class: 'radio-inline' %>
+    <%= f.radio_button :gender, false %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <div class="col-md-6">
+    <%= f.label :blood_type %>
+    <%= f.select :blood_type, ['A' ,'B', 'AB', 'O'], {}, prompt: 'Select One', class: 'form-control' %>
+      </div>
+    </div>
+
+
+     <%= f.submit "Apply", class: "btn btn-primary" %>
+
 
 
 
