--- a/web/app/views/registers/index.html.erb
+++ b/web/app/views/registers/index.html.erb
@@ -11,6 +11,6 @@
 
   <%= render 'form', register: @register %>
 
-  <%= link_to 'Back', registers_path %>
+  <%= link_to 'Back', login_path %>
 </div>
 
