--- a/web/app/views/registers/_form.html.erb
+++ b/web/app/views/registers/_form.html.erb
@@ -41,6 +41,14 @@
 
 
   <div class="form-group row">
+    <div class="col-md-6">
+      <%= form.label :country %>
+      <%= form.select "country", options_for_select(@countries.collect {|p| [ p['name'], p['id'] ] }), {}, prompt: 'Select One', class: 'form-control' %>
+    </div>
+  </div>
+
+
+  <div class="form-group row">
     <div class="col-md-4">
       <%= form.label :username %>
       <%= form.text_field :username, class: 'form-control' %>
