--- a/web/app/views/registers/_form.html.erb
+++ b/web/app/views/registers/_form.html.erb
@@ -47,6 +47,12 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <div class="col-md-6">
+      <%= form.label :state %>
+      <%= form.select "state", options_for_select(@states.collect {|p| [ p['name'], p['id'] ] }), {}, prompt: 'Select One', class: 'form-control' %>
+    </div>
+  </div>
 
   <div class="form-group row">
     <div class="col-md-4">
