--- a/web/app/views/registers/_form.html.erb
+++ b/web/app/views/registers/_form.html.erb
@@ -42,14 +42,14 @@
   <div class="form-group row">
     <div class="col-md-6">
       <%= form.label :country %>
-      <%= form.select :country, options_for_select(@countries.collect {|p| [ p['name'], p['id'] ] }), {}, prompt: 'Select One', class: 'form-control' %>
+      <%= form.select :country, options_for_select(@countries.collect {|p| [ p['name'], p['id'] ] }), {:prompt => 'Select a country'},  class: 'form-control' %>
     </div>
   </div>
 
   <div class="form-group row">
     <div class="col-md-6">
       <%= form.label :state %>
-      <%= form.select :state, options_for_select(@states.collect {|p| [ p['name'], p['id'] ] }), {}, prompt: 'Select One', class: 'form-control' %>
+      <%= form.select :state, options_for_select(@states.collect {|p| [ p['name'], p['id'] ] }), {:prompt => 'Select a country first'}, class: 'form-control', disabled: true %>
     </div>
   </div>
 
