--- a/web/app/assets/stylesheets/application.css.scss
+++ b/web/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap-datepicker";
 
 .alert-notice { @extend .alert-success; }
 .alert-alert { @extend .alert-danger; }
