--- a/web/app/views/registers/_form.html.erb
+++ b/web/app/views/registers/_form.html.erb
@@ -40,6 +40,13 @@
   </div>
 
   <div class="form-group row">
+    <div class="col-md-4">
+      <%= form.label :date_of_birth %>
+      <%= form.text_field :date_of_birth, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group row">
     <div class="col-md-6">
       <%= form.label :country %>
       <%= form.select :country, options_for_select(@countries.collect {|p| [ p['name'], p['id'] ] }), {:prompt => 'Select a country'},  class: 'form-control' %>
